@@ -22,7 +22,7 @@ plugins {
 }
 
 task wrapper(type: Wrapper) {
-    gradleVersion = '4.7'
+    gradleVersion = '4.9'
 }
 
 apply plugin: 'ca.cutterslade.analyze'
@@ -71,7 +71,7 @@ ext.versions = [
         curator           : '2.12.0', //must be chosen to be compatible with the ZK version in CDH 5.10
         dropwizard        : '1.3.5', //if you change this version you should check the versions below that need to move in sync with it
         dropwizard_metrics: '4.0.2', //should be kept in step with dropwizard
-        guava             : '21.0',
+        guava             : '26.0-jre',
         gwt               : '2.8.2',
         hibernate         : '5.2.13.Final', //dropwiz 1.2.5 uses -validator 5.4.2.Final and -core 5.2.12.Final
         hikari            : '3.2.0',
@@ -143,7 +143,7 @@ ext.libs = [
         gwtp_mvp_client                : "com.gwtplatform:gwtp-mvp-client:0.7",
         hamcrest_core                  : "org.hamcrest:hamcrest-core:1.3",
         hbase                          : "org.apache.hbase:hbase-common:1.2.1", //should be set to be consistent with CDH version
-        hessian                        : "com.caucho:hessian:4.0.38",
+        hessian                        : "com.caucho:hessian:4.0.51",
         hibernate_core                 : "org.hibernate:hibernate-core:$versions.hibernate" /* LATEST 5.2.13.Final */,
         hibernate_entitymanager        : "org.hibernate:hibernate-entitymanager:$versions.hibernate" /* LATEST 5.2.5.Final */,
         hibernate_jpa_api              : "org.hibernate.javax.persistence:hibernate-jpa-2.1-api:1.0.2.Final",
@@ -156,6 +156,8 @@ ext.libs = [
         jackson_databind               : "com.fasterxml.jackson.core:jackson-databind:$versions.jackson", //was 2.8.5, now 2.8.6
         java_jwt                       : "com.auth0:java-jwt:3.1.0",
         javassist                      : "org.javassist:javassist:3.18.1-GA",
+        javax_activation               : "javax.activation:javax.activation-api:1.2.0",
+        javax_annotation               : "javax.annotation:javax.annotation-api:1.3.2",
         javax_el                       : "org.glassfish:javax.el:3.0.1-b08",
         javax_el_api                   : "javax.el:javax.el-api:3.0.0",
         javax_inject                   : "javax.inject:javax.inject:1",
@@ -163,6 +165,7 @@ ext.libs = [
         javax_servlet_api              : "javax.servlet:javax.servlet-api:3.1.0",
         javax_validation               : 'javax.validation:validation-api:1.1.0.Final',
         jaxb_api                       : "javax.xml.bind:jaxb-api:2.3.0",
+        jaxb_runtime                   : "org.glassfish.jaxb:jaxb-runtime:2.3.0.1",
         jcl_over_slf4j                 : "org.slf4j:jcl-over-slf4j:$versions.slf4j",
         jcommander                     : 'com.beust:jcommander:1.72',
         jersey_client                  : "org.glassfish.jersey.core:jersey-client:$versions.jersey",
@@ -187,7 +190,7 @@ ext.libs = [
         lucene_core                    : "org.apache.lucene:lucene-core:$versions.lucene",
         lucene_queryparser             : "org.apache.lucene:lucene-queryparser:$versions.lucene",
         lucene_backward_codecs: "org.apache.lucene:lucene-backward-codecs:$versions.lucene",
-        mockito_core                   : "org.mockito:mockito-core:2.0.2-beta",
+        mockito_core                   : "org.mockito:mockito-core:2.21.0",
         mysql_connector_java           : "mysql:mysql-connector-java:5.1.40",
         poi                            : "org.apache.poi:poi:3.17",
         poi_ooxml                      : "org.apache.poi:poi-ooxml:3.17",
@@ -253,6 +256,7 @@ allprojects {
     // Make doclint be quiet - we don't care about JavaDoc warnings.
     tasks.withType(Javadoc) {
         options.addStringOption('Xdoclint:none', '-quiet')
+        options.addBooleanOption('html5', true)
     }
 }
 
@@ -261,11 +265,11 @@ subprojects {
     //println "Configuring subproject ${project.path}"
 
     apply plugin: 'java'
-    apply plugin: 'ca.cutterslade.analyze' //analyze missing dependencies for the code base
+//    apply plugin: 'ca.cutterslade.analyze' //analyze missing dependencies for the code base
     apply plugin: 'idea'
 
-    sourceCompatibility = 1.8
-    targetCompatibility = 1.8
+    sourceCompatibility = JavaVersion.VERSION_1_10
+    targetCompatibility = JavaVersion.VERSION_1_10
 
     sourceSets {
         // This lets us use different directories for our integration tests.
@@ -381,7 +385,7 @@ subprojects {
     }
 
     clean {
-        //clear out the 'out' dirs used by intelliJ
+        // clear out the 'out' dirs used by intelliJ
         delete "out"
     }
 
@@ -391,10 +395,15 @@ subprojects {
 
 
 
-
-
-
-
+//    // Add support for JAXB binding in J9 modules.
+//    tasks.withType(AbstractCompile) {
+//        options.compilerArgs += ["--add-modules", "java.xml.bind,java.xml.ws.annotation"]
+//    }
+//
+//    tasks.withType(Test) {
+//        jvmArgs += ["--add-modules", "java.xml.bind,java.xml.ws.annotation"]
+//    }
+//
 
 
 
